--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,36 @@
+body{
+
+}
+h2{
+  margin-top:20px;
+}
 .selector-section{
   text-align: center;
 }
 
 
 .ingredient-div{
+  display: inline-block;
+  text-align: lef;
+width: 50%;
+margin-bottom: 5%;
+padding: 20px;
 
- text-align: center;
-  width: auto;
-  margin: auto;
 }
 
 .ingredient {
 
 display: inline-block;
-  height: 60px;
-  opacity: 0.6;
-  margin: 50px 20px 50px 20px;
+  height: 70px;
+  width: 70px;
+  background-size: cover;
+  border-radius: 20%;
+  opacity: 0.8;
+  margin-top: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
   } .ingredient:hover {
-    transform: scale(1.2);
+    transform: scale(1.5);
     opacity: 1;
     animation: box-hover 0.3s
   }
@@ -28,23 +41,28 @@ display: inline-block;
     }
     50% {
       opacity: 1;
-    transform: scale(1.3);
+    transform: scale(1.8);
     }
     100% {
       opacity: 1;
-    transform: scale(1.2);
+    transform: scale(1.5);
   }
 
   }
 
 .ingredient-selected {
-    border-radius: 20%;
-  background-color: #73eceb;
+  box-shadow: 0px 0px 20px 5px #66ffff;
 }
 
 .ingredient-img {
-  max-width: 100%;
-  max-height: 100%;
+  width: 100%;
+  height: 100%;
+}
+
+.list-group{
+  display: inline-block;
+  position: fixed;
+  top: 14%;
 }
 
 .display-ingredient {
