--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,28 @@
 body{
-
+font-family: 'Didact Gothic', sans-serif;
 }
 h2{
   margin-top:20px;
+
+
+}
+hr{
+  width: 20%;
+  margin: auto;
+}
+
+.logo{
+
+}
+
+.load-screen{
+  margin-top: 100px;
+  text-align: center;
+
+
 }
 .selector-section{
+  margin-top: 100px;
   text-align: center;
 }
 
@@ -28,6 +46,7 @@ display: inline-block;
   margin-top: 20px;
   margin-left: 10px;
   margin-right: 10px;
+
   } .ingredient:hover {
     transform: scale(1.5);
     opacity: 1;
@@ -53,6 +72,10 @@ display: inline-block;
   box-shadow: 0px 0px 20px 5px #66ffff;
 }
 
+.show-meal{
+  margin-top: 100px;
+}
+
 .ingredient-img {
   width: 100%;
   height: 100%;
@@ -62,7 +85,7 @@ display: inline-block;
   display: inline-block;
 left: 80%;
   position: fixed;
-  top: 14%;
+  top: 24%;
   width: 18%;
 }
 
@@ -73,7 +96,11 @@ position: fixed;
   width: 200px;
   left: 5%;
   margin-right: 20px;
-  top: 14%;
+  top: 24%;
+
+}
+.hide-div{
+  display: none;
 }
 
 .display-ingredient {
