--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,11 @@ hr{
   margin: auto;
 }
 
+.start-over{
+  display: inline-block;
+  position: relative;
+}
+
 .logo{
 
 }
@@ -72,7 +77,7 @@ display: inline-block;
   box-shadow: 0px 0px 20px 5px #66ffff;
 }
 
-.show-meal{
+.button-div{
   margin-top: 100px;
 }
 
@@ -85,7 +90,7 @@ display: inline-block;
   display: inline-block;
 left: 80%;
   position: fixed;
-  top: 24%;
+  top: 27%;
   width: 18%;
 }
 
@@ -96,7 +101,7 @@ position: fixed;
   width: 200px;
   left: 5%;
   margin-right: 20px;
-  top: 24%;
+  top: 27%;
 
 }
 .hide-div{
@@ -111,6 +116,18 @@ position: fixed;
 .card{
 
 margin: 10px auto;
+}
+
+.size-button{
+  display: inline-block;
+    height: 70px;
+    width: 70px;
+    background-size: cover;
+    border-radius: 20%;
+    opacity: 0.8;
+    margin-top: 20px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .macro-section{
