--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,14 +9,18 @@
       </header>
 
 
-<section class="selector-section container-fluid hide-div">
-  <h1>
-    Landing
-  </h1>
-  <p>
-    My page
-  </p>
-</section>
+      <section class="about-us">
+        <div class="our-story-div">
+            <h3>About Us</h3>
+            <hr>
+            <br>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec pulvinar tortor a nibh auctor vehicula. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla semper justo vel odio consequat, eget semper lacus euismod. Nam vitae nisi nunc. Phasellus ut tempus turpis, sed fermentum eros. Cras sit amet tortor tellus. Duis in placerat eros. Nam lorem ligula, venenatis non odio sed, faucibus faucibus elit. Praesent tincidunt erat non mauris gravida viverra. Donec tincidunt aliquam nunc nec pretium. Etiam fringilla accumsan pretium. Cras vehicula interdum dolor ac eleifend.
+</p>
+<p>
+Morbi in diam a massa ullamcorper vestibulum. Nam ultrices, urna sit amet fermentum varius, quam nisl efficitur felis, non convallis massa nunc sit amet eros. Mauris sapien justo, elementum a dictum eget, imperdiet at nunc. Curabitur posuere pulvinar lacinia. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla facilisi. Sed consequat, massa sed vehicula elementum, tellus neque consectetur lectus, eu auctor sapien elit a tellus. Praesent suscipit ac quam ut elementum. In eleifend dolor eu arcu tincidunt, eget auctor libero consectetur. Suspendisse lacus lorem, blandit ac aliquam ut, suscipit eu neque. Proin fringilla interdum erat, sed tincidunt ipsum finibus nec. Nulla aliquet ligula at odio rhoncus, nec euismod odio consectetur.</p>
+        </div>
+        </section>
 </body>
 <footer>
 <%- include('partials/footer') -%>
