--- a/views/order.ejs
+++ b/views/order.ejs
@@ -226,7 +226,7 @@
     <div class="button-div">
   <button type="button" onClick="window.location.href=window.location.href" class="start-over btn btn-danger">Start Over</button>
 <button type="button" class="btn btn-warning">Add and Continue (tba)</button>
-<form class="" action="/order" method="post">
+<form class="" action="/payment" method="post">
 <button type="submit" class="process-meal btn btn-success">To Payment</button>
 </form>
 </div>
